policies/Container/firewall/iptables.rules
# Generated by iptables-save v1.4.21 on Wed Oct 14 09:33:28 2015
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:CONTAINER - [0:0]
:DNS - [0:0]
:EXTERNAL - [0:0]
:INTERNAL - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j CONNSECMARK --restore
-A INPUT -j CONTAINER
-A INPUT -s 255.255.255.255/32 -j INTERNAL
-A INPUT -s 127.0.0.0/8 -j INTERNAL
-A INPUT -s 10.0.0.0/8 -j INTERNAL
-A INPUT -s 172.16.0.0/12 -j INTERNAL
-A INPUT -s 224.0.0.0/24 -j INTERNAL
-A INPUT -s 192.168.0.0/16 -j INTERNAL
-A INPUT -p udp -m udp --sport 53 -j DNS
-A INPUT -p tcp -m tcp --sport 53 -j DNS
-A INPUT -j EXTERNAL
-A OUTPUT -m state --state RELATED,ESTABLISHED -j CONNSECMARK --restore
-A OUTPUT -j CONTAINER
-A OUTPUT -d 255.255.255.255/32 -j INTERNAL
-A OUTPUT -d 127.0.0.0/8 -j INTERNAL
-A OUTPUT -d 10.0.0.0/8 -j INTERNAL
-A OUTPUT -d 172.16.0.0/12 -j INTERNAL
-A OUTPUT -d 224.0.0.0/24 -j INTERNAL
-A OUTPUT -d 192.168.0.0/16 -j INTERNAL
-A OUTPUT -p udp -m udp --dport 53 -j DNS
-A OUTPUT -p tcp -m tcp --dport 53 -j DNS
-A OUTPUT -j EXTERNAL
-A CONTAINER -p tcp -m tcp --dport 8888 -j SECMARK --selctx system_u:object_r:container_packet_t:s0
-A CONTAINER -j CONNSECMARK --save
-A CONTAINER -j ACCEPT
-A DNS -j SECMARK --selctx system_u:object_r:dns_external_packet_t:s0
-A DNS -j CONNSECMARK --save
-A DNS -j ACCEPT
-A EXTERNAL -j SECMARK --selctx system_u:object_r:external_packet_t:s0
-A EXTERNAL -j CONNSECMARK --save
-A EXTERNAL -j ACCEPT
-A INTERNAL -j SECMARK --selctx system_u:object_r:internal_packet_t:s0
-A INTERNAL -j CONNSECMARK --save
-A INTERNAL -j ACCEPT
COMMIT
# Completed on Wed Oct 14 09:33:28 2015
# Generated by iptables-save v1.4.21 on Wed Oct 14 09:33:28 2015
*mangle
:PREROUTING ACCEPT [48:4783]
:INPUT ACCEPT [48:4783]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [49:4835]
:POSTROUTING ACCEPT [59:6778]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Wed Oct 14 09:33:28 2015
# Generated by iptables-save v1.4.21 on Wed Oct 14 09:33:28 2015
*nat
:PREROUTING ACCEPT [1:28]
:INPUT ACCEPT [1:28]
:OUTPUT ACCEPT [40:3127]
:POSTROUTING ACCEPT [40:3127]
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
COMMIT
# Completed on Wed Oct 14 09:33:28 2015
# Generated by iptables-save v1.4.21 on Wed Oct 14 09:33:28 2015
*filter
:INPUT ACCEPT [4:304]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4:304]
COMMIT
# Completed on Wed Oct 14 09:33:28 2015
